[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Baby.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Ollie Sprites/Ollie.Still.Front.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Ollie Sprites/Ollie.Walking.Front_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Ollie Sprites/Ollie.Walking.Front_2.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Standing_Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "Walking_Down",
"speed": 3.5
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 8.51358, 7.95578 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 19.0842

[node name="Baby" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "Walking_Down"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="BabyCollisionArea" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BabyCollisionArea" index="0"]

shape = SubResource( 3 )

[node name="MovementTime" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="BabyTimeout" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[connection signal="body_entered" from="BabyCollisionArea" to="." method="_on_BabyCollisionArea_body_entered"]

[connection signal="timeout" from="MovementTime" to="." method="_on_MovementTime_timeout"]

[connection signal="timeout" from="BabyTimeout" to="." method="_on_BabyTimeout_timeout"]


